Added ability to delete individual cities

--- a/app/src/main/assets/html/help.html
+++ b/app/src/main/assets/html/help.html
@@ -17,15 +17,27 @@
 <h2>Help for My Weather</h2>
 
 <h3>Adding a new city</h3>
-<p>From the settings menu, tap Add City. In the new screen that appears, pan and zoom the map to where you want it.  Tap the map to drop a pin. Enter a name for this city.  Tap Save to confirm your new city, or tap the back button to cancel.
+<p>From the menu, tap Add City. In the new screen that appears, pan and zoom the map to where you want it.  Tap the map to drop a pin. Enter a name for this city.  Tap Save to confirm your new city, or tap the back button to cancel.
 </p>
 
-<h3>Adding a new city</h3>
-<p>From the settings menu, tap Add City. In the new screen that appears, pan and zoom the map to where you want it.  Tap the map to drop a pin. Enter a name for this city.  Tap Save to confirm your new city, or tap the back button to cancel.
+<h3>Viewing today's forecast for a city</h3>
+<p>Tap the name of the city in the list and a forecast screen will appear.
 </p>
 
-<h3>Adding a new city</h3>
-<p>From the settings menu, tap Add City. In the new screen that appears, pan and zoom the map to where you want it.  Tap the map to drop a pin. Enter a name for this city.  Tap Save to confirm your new city, or tap the back button to cancel.
+<h3>Refreshing the forecasts</h3>
+<p>The latest weather forecasts will automatically be downloaded when the app starts, and when the device is rotated.
+</p>
+
+<h3>Deletng a city</h3>
+<p>From the city list, tap the X button next to the city you want to delete.  It will no longer appear in the list.
+</p>
+
+<h2>Settings</h2>
+<p>From the menu, tap Settings to see the settings screen.
+</p>
+
+<h3>Deleting all cities</h3>
+<p>On the settings screen, tap the Clear All button to remove all cities.
 </p>
 
 </body>
