Added settings screen and ability to delete all cities at once

--- a/app/src/main/assets/html/help.html
+++ b/app/src/main/assets/html/help.html
@@ -37,7 +37,7 @@
 </p>
 
 <h3>Deleting all cities</h3>
-<p>On the settings screen, tap the Clear All button to remove all cities.
+<p>On the settings screen, tap the Delete All button to remove all cities.
 </p>
 
 </body>
